force-app/main/default/objects/Track_Milestone__c/Track_Milestone__c.object-meta.xml
<CustomObject>
    <label>Track Milestone</label>
    <nameField>
        <label>Track Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Track Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>