force-app/main/default/objects/Track_Milestone__c/fields/Actual_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Milestone_Date__c</fullName>
    <label>Actual Milestone Date</label>
    <type>Date</type>
</CustomField>