force-app/main/default/objects/Track_Milestone__c/fields/Milestone_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Achieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone Achieved</label>
    <type>Checkbox</type>
</CustomField>