force-app/main/default/objects/Track_Milestone__c/fields/Program_Track__c.field-meta.xml
<CustomField>
    <fullName>Program_Track__c</fullName>
    <label>Program Track</label>
    <referenceTo>Program_Track__c</referenceTo>
    <relationshipLabel>Track Milestones</relationshipLabel>
    <relationshipName>Track_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>