force-app/main/default/objects/Track_Milestone__c/fields/Target_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Milestone_Date__c</fullName>
    <label>Target Milestone Date</label>
    <type>Date</type>
</CustomField>